<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_baseline_menu_book_24"
        android:title="@string/news"
        android:enabled="true"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_baseline_add_circle_outline_24"
        android:title="@string/contribute"
        android:enabled="true"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_baseline_library_books_24"
        android:title="@string/tips_and_laws"
        android:enabled="true"
        app:showAsAction="ifRoom"/>

</menu>