<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".homepage.contribute.ContributeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="32dp"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:fontFamily="@font/nunito"
                android:text="@string/you_can_write_your_story_here_so_that_other_people_might_know_it_and_can_be_saved_from_being_a_victim_of_cyber_crime_read_the_content_thoroughly_before_submitting_once_submitted_we_ll_verify_the_content_make_it_public_within_24_hours_and_will_let_you_know_by_email_nfor_each_view_of_your_article_you_ll_get_50p"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>


            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="32dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView3"/>

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="32dp"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:fontFamily="@font/nunito"
                android:text="@string/title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/spinner"/>

            <EditText
                android:id="@+id/editText_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="8dp"
                android:padding="8dp"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:fontFamily="@font/nunito"
                android:background="@drawable/edittext_bg"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView1"/>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="32dp"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:fontFamily="@font/nunito"
                android:text="@string/your_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editText_title"/>

            <EditText
                android:id="@+id/editText_description"
                android:layout_width="match_parent"
                android:layout_height="500dp"
                android:inputType="textMultiLine"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="8dp"
                android:padding="8dp"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:fontFamily="@font/nunito"
                android:gravity="top"
                android:background="@drawable/edittext_bg"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView2"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:fontFamily="@font/nunito"
                android:background="@drawable/button_bg_solid"
                android:textAllCaps="false"
                android:text="@string/submit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editText_description"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="32dp"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>